Fix align on mobile devices

--- a/web-ui/src/main/resources/catalog/style/gn.less
+++ b/web-ui/src/main/resources/catalog/style/gn.less
@@ -300,9 +300,7 @@ a {
 .gn-logo {
   max-height: 36px;
   vertical-align: top;
-  @media (max-width: @screen-md-max) {
-    margin-top: -6px;
-  }
+  margin: -3px 0px 0px 12px;
   @media (max-width: @screen-xs-max) {
     margin-top: 0;
   }
